[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools >= 61.2.0",
  "setuptools-scm >= 6.3.2",
  "wheel >= 0.37.0",
]

[project]
name = "spinsimpy"
description = "An open source Python package for thermodynamics in spin models"
readme = "README.md"
version = "1.0.0"
keywords = [
  "spin models",
  "condensed matter",
]
license = {file = "LICENSE.txt"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "mpmath",
  "pytest",
  "scipy"
]

[project.urls]
Source = "https://github.com/javinoram/SpinSim.py"
website = "https://github.com/javinoram/SpinSim.py"

[tool.setuptools_scm]
write_to = "spinsim/_version.py"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"SpinSim.py.spinsim" = ["*"]
